# edge-sync

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/edge_sync/concurrency/: spsc_ring_buffer.hpp
include/edge_sync/core/: object_pool.hpp  sensor_types.hpp
include/edge_sync/fusion/: complementary_filter.hpp  fusion_strategy.hpp
include/edge_sync/sync/: sync_engine.hpp
src/: main.cpp
src/fusion/: complementary_filter.cpp
src/sync/: sync_engine.cpp
